--- a/store/products/templates/products/base.html
+++ b/store/products/templates/products/base.html
@@ -22,15 +22,15 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Store</a>
+        <a class="navbar-brand" href="#">Store</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="products.html">Каталог <i class="fas fa-shopping-bag"></i></a>
+              <a class="nav-link" href="#">Каталог <i class="fas fa-shopping-bag"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="users/login.html">Войти <i class="fas fa-sign-in-alt"></i></a>
+              <a class="nav-link" href="{% url 'users:login' %}">Войти <i class="fas fa-sign-in-alt"></i></a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user-circle"></i></a>
