--- a/store/products/templates/products/base.html
+++ b/store/products/templates/products/base.html
@@ -36,7 +36,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user-circle"></i></a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item" href="users/profile.html">Профиль</a>
+                  <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="orders/orders.html">Заказы</a>
