--- a/store/products/templates/products/base.html
+++ b/store/products/templates/products/base.html
@@ -22,14 +22,14 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Store</a>
+        <a class="navbar-brand" href="{% url 'products:index' %}">Store</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Каталог <i class="fas fa-shopping-bag"></i></a>
+                    <a class="nav-link" href="{% url 'products:index' %}">Каталог <i class="fas fa-shopping-bag"></i></a>
                 </li>
                 {% if not user.is_authenticated %}
                     <li class="nav-item">
