--- a/store/products/templates/products/products.html
+++ b/store/products/templates/products/products.html
@@ -64,9 +64,9 @@
                                     <h5>{{ item.price }}</h5>
                                     <p class="card-text">{{ item.description }}</p>
                                 </div>
-                                <div class="card-footer text-center">
-                                    <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
-                                </div>
+                                <a class="btn btn-outline-success"
+                                   href="{% url 'products:basket_add' item.id %}">Отправить в корзину
+                                    <a>
                             </div>
                         </div>
                     {% endfor %}
