--- a/store/products/templates/products/basket.html
+++ b/store/products/templates/products/basket.html
@@ -1,7 +1,7 @@
 {% if baskets %}
 
     <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">Корзина <span
-            class="badge badge-secondary badge-pill">3</span></h4>
+            class="badge badge-secondary badge-pill">{{ baskets.total_quantity }}</span></h4>
     {% for basket in baskets %}
     <div class="card mb-3">
         <div class="card-body">
@@ -14,7 +14,7 @@
                     <div class="col-lg-4">
                         <input name="basketID" type="number" class="form-control" value="{{ basket.quantity }}" min="0"/>
                     </div>
-                    <div class="col-lg-4">{{ basket.product.price }}</div>
+                    <div class="col-lg-4">{{ basket.sum }} руб.</div>
                     <div class="col-lg-4">
                         <a href="{% url 'products:basket_remove' basket.id %}"><i class="fas fa-trash"></i></a>
                     </div>
@@ -26,7 +26,7 @@
     <div class="card mb-3">
         <div class="card-footer">
             <p class="float-left">Итого</p>
-            <h4 class="float-right">2 390 руб.</h4>
+            <h4 class="float-right">{{ baskets.total_sum }}</h4>
         </div>
     </div>
     <a class="btn btn-success btn-lg float-right" href="../orders/order-create.html">Оформить заказ</a>
