--- a/store/products/templates/products/base.html
+++ b/store/products/templates/products/base.html
@@ -41,7 +41,7 @@
                            data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user-circle"></i></a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="{% url 'users:profile' %}">Профиль</a>
+                                <a class="dropdown-item" href="{% url 'users:profile' user.pk %}">Профиль</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="orders/orders.html">Заказы</a>
